appId: ${APP_ID}
---
- tapOn:
    id: tab.ffmpeg
- tapOn:
    id: ffmpeg.generate-video
- assertVisible:
    id: ffmpeg.generated-video-verification
- assertVisible:
    id: logs.output
- tapOn:
    id: tab.ffprobe
- tapOn:
    id: ffprobe.media-info
- assertVisible:
    id: logs.output
